--- a/test/Unit/KioskLibrary.Spec/KioskLibrary.Spec.csproj
+++ b/test/Unit/KioskLibrary.Spec/KioskLibrary.Spec.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Compile Include="Actions\WebsiteActionSpec.cs" />
     <Compile Include="Orchestration\OrchestrationInstanceSpec.cs" />
+    <Compile Include="Orchestration\OrchestratorSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
