Refactored some test code. Added GetNextOrchestrationTest

--- a/test/Common/CommonTestLibrary/CommonTestLibrary.csproj
+++ b/test/Common/CommonTestLibrary/CommonTestLibrary.csproj
@@ -136,6 +136,12 @@
       <Version>2.1.2</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\KioskLibrary\KioskLibrary.csproj">
+      <Project>{3a33dd7f-a863-43d1-a2c0-8ee46cfae78f}</Project>
+      <Name>KioskLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
