Feature/unit tests (#26)
* Refactored HttpClient to be testable
Added unit tests for Actions
Added constructor unit tests for OrchestrationInstance

* Refactored HttpClient to be testable
Added unit tests for Actions
Added constructor unit tests for OrchestrationInstance

* Added GetOrchestrationInstanceTest

* Added recursive comparioson to equality test

* Added GetOrchestrationInstanceAfterExceptionTest and ConvertStringToOrchestrationInstanceTest

* Add test execution to pipeline

* Changed test paths

* Update configuration manager

* Removed deployment from config manager

* New pipeline test parameters

* Reworked to support testing

* Fixed test path

* Added ValidateAsyncTest for OrchestrationInstance

* Made ApplicationStorage injectable.

* Refactored some test code.
Added GetNextOrchestrationTest

* Added ConstructorTest
Added GetNextOrchestrationFailsTest
Added StartOrchestrationWithNoValidOrchestrationStoredTest
Added StartOrchestrationTest

* Added some exceptions to the pipeline job

* Try using a single process

* Fixed tests

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,11 @@ trigger:
     - rel/*
   paths:
     exclude:
+      - 'LICENSE'
       - '**/*.md'
+      - '**/*.ai'
+      - 'logo/*.png'
+      - 'azure-pipelines.yml'
 
 pr:
   branches:
@@ -24,7 +28,11 @@ pr:
     - develop
     - rel/*
     exclude:
+      - 'LICENSE'
       - '**/*.md'
+      - '**/*.ai'
+      - 'logo/*.png'
+      - 'azure-pipelines.yml'
 
 pool:
   vmImage: 'windows-latest'
@@ -33,6 +41,8 @@ variables:
 - group: code-signing
 - name: solution
   value: '**/*.sln'
+- name: testConfiguration
+  value: 'Debug'
 - name: buildConfiguration
   value: 'Release'
 - name: appxPackageDir
@@ -72,13 +82,49 @@ steps:
       $store.Close()
 
 - task: VSBuild@1
-  displayName: 'Package Kiosk Client'
+  displayName: 'Build Kiosk Client: $(testConfiguration)'
+  inputs:
+    solution: '$(solution)'
+    msbuildArchitecture: 'x86'
+    configuration: '$(testConfiguration)'
+    clean: false
+    msbuildArgs: '/m:1
+                  /p:platform=x64 /p:platform=x86
+                  /p:AppxBundlePlatforms="x86"
+                  /Fileloggerparameters:verbosity=quiet
+                  /Consoleloggerparameters:verbosity=minimal
+                  /p:AppxPackageDir="$(appxPackageDir)"
+                  /nodeReuse:false'
+
+- task: VSTest@2
+  displayName: 'Run Tests'
+  inputs:
+    uiTests: false
+    testSelector: 'testAssemblies'
+    testAssemblyVer2: |
+      **\**Spec**.appxrecipe
+      **\**Test**.appxrecipe
+      !**\*TestAdapter.dll
+      !**\obj\**
+    searchFolder: '$(System.DefaultWorkingDirectory)'
+    codeCoverageEnabled: true
+    testRunTitle: 'Run All Tests'
+
+- task: PublishTestResults@2
+  displayName: 'Publish Tests'
+  inputs:
+    testResultsFormat: 'VSTest'
+    testResultsFiles: '**/TEST-*.xml'
+    testRunTitle: 'Publish Test Results'
+
+- task: VSBuild@1
+  displayName: 'Build Kiosk Client: $(buildConfiguration)'
   inputs:
     solution: '$(solution)'
     msbuildArchitecture: 'x86'
     configuration: '$(buildConfiguration)'
     clean: false
-    msbuildArgs: '/m
+    msbuildArgs: '/m:1
                   /p:platform=x64 /p:platform=x86
                   /p:AppxBundlePlatforms="x86"
                   /Fileloggerparameters:verbosity=quiet
@@ -89,7 +135,7 @@ steps:
                   /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
                   /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
                   /p:PackageCertificatePassword="$(signingCert.password)"
-                  -nodeReuse:false'
+                  /nodeReuse:false'
 
 - task: CopyFiles@2
   displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
