--- a/test/Unit/KioskLibrary.Spec/KioskLibrary.Spec.csproj
+++ b/test/Unit/KioskLibrary.Spec/KioskLibrary.Spec.csproj
@@ -120,11 +120,14 @@
     <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\WebsiteActionSpec.cs" />
+    <Compile Include="Orchestration\OrchestrationInstanceSpec.cs" />
+    <Compile Include="Orchestration\OrchestratorSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UnitTest.cs" />
+    <Compile Include="Actions\ImageActionSpec.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="UnitTestApp.xaml">
@@ -151,6 +154,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.11</Version>
     </PackageReference>
+    <PackageReference Include="Moq">
+      <Version>4.16.0</Version>
+    </PackageReference>
     <PackageReference Include="MSTest.TestAdapter">
       <Version>2.1.2</Version>
     </PackageReference>
@@ -162,6 +168,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\KioskLibrary\KioskLibrary.csproj">
+      <Project>{3a33dd7f-a863-43d1-a2c0-8ee46cfae78f}</Project>
+      <Name>KioskLibrary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Common\CommonTestLibrary\CommonTestLibrary.csproj">
       <Project>{1cb1401d-14a9-4f15-9a3f-81349fad32d3}</Project>
       <Name>CommonTestLibrary</Name>
