--- a/src/OrchestrationPollingManager/OrchestrationPollingManager.csproj
+++ b/src/OrchestrationPollingManager/OrchestrationPollingManager.csproj
@@ -130,6 +130,12 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.11</Version>
     </PackageReference>
+    <PackageReference Include="Serilog">
+      <Version>2.10.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Exceptions">
+      <Version>6.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KioskLibrary\KioskLibrary.csproj">
