--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,8 @@ variables:
 - group: code-signing
 - name: solution
   value: '**/*.sln'
+- name: deployProject
+  value: '**/KioskClient.csproj'
 - name: testConfiguration
   value: 'Debug'
 - name: buildConfiguration
@@ -118,14 +120,14 @@ steps:
     testRunTitle: 'Publish Test Results'
 
 - task: VSBuild@1
-  displayName: 'Build Kiosk Client: $(buildConfiguration)'
+  displayName: 'Build Kiosk Client Deployment: $(buildConfiguration)'
   inputs:
-    solution: '$(solution)'
+    solution: '$(deployProject)'
     msbuildArchitecture: 'x86'
     configuration: '$(buildConfiguration)'
     clean: false
     msbuildArgs: '/m:1
-                  /p:platform=x64 /p:platform=x86
+                  /p:platform=x64 /p:platform=x86  /p:platform=arm
                   /p:AppxBundlePlatforms="x86"
                   /Fileloggerparameters:verbosity=quiet
                   /Consoleloggerparameters:verbosity=minimal
