--- a/test/Common/CommonTestLibrary/CommonTestLibrary.csproj
+++ b/test/Common/CommonTestLibrary/CommonTestLibrary.csproj
@@ -135,6 +135,12 @@
     <PackageReference Include="MSTest.TestFramework">
       <Version>2.1.2</Version>
     </PackageReference>
+    <PackageReference Include="System.Xml.XDocument">
+      <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Xml.XPath.XDocument">
+      <Version>4.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\KioskLibrary\KioskLibrary.csproj">
