--- a/test/Unit/KioskClient.Spec/KioskClient.Spec.csproj
+++ b/test/Unit/KioskClient.Spec/KioskClient.Spec.csproj
@@ -159,6 +159,12 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk">
       <Version>16.8.3</Version>
     </PackageReference>
+    <PackageReference Include="System.Xml.XDocument">
+      <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Xml.XPath.XDocument">
+      <Version>4.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Common\CommonTestLibrary\CommonTestLibrary.csproj">
