--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,6 +92,7 @@ steps:
     clean: false
     msbuildArgs: '/m:1
                   /p:platform=x64 /p:platform=x86
+                  /p:AppxBundlePlatforms="x86"
                   /Fileloggerparameters:verbosity=quiet
                   /Consoleloggerparameters:verbosity=minimal
                   /nodeReuse:false'
