--- a/src/KioskClient/KioskClient.csproj
+++ b/src/KioskClient/KioskClient.csproj
@@ -225,6 +225,7 @@
     <Content Include="Assets\AppIcon\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\AppIcon\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\AppIcon\Wide310x150Logo.scale-400.png" />
+    <None Include="Kiosk Client Store Key.pfx" />
     <None Include="Package.StoreAssociation.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Resources\KioskClient.ttf">
